# pgpro

./: .gitignore  404.html  Cargo.toml  index.html  print.html  searchindex.js  searchindex.json
.github/workflows/: pipeline.yml  release.yml
adrs/: 1-usage-of-adrs.html  2-usage-of-keywords.html  3-versioning.html  4-experimental-flag.html  5-usage-of-feature-flags.html  root.html
docs/: README.md
docs/wiki/: book.toml
docs/wiki/src/: home.md
docs/wiki/src/introduction/: command-reference.md  installation.md  root.md  security.md
introduction/: command-reference.html  installation.html  root.html  security.html
rfcs/: root.html
scripts/: test.sh
src/: args.rs  db.rs  error.rs  main.rs
store/: db  snap.000000000000130C
test/: test.sh
